--- a/package.json
+++ b/package.json
@@ -1,14 +1,35 @@
 {
   "name": "exam-bytetech",
+  "author": "Dang Hieu Liem <hieuliem33@gmail.com>",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^18.17.x",
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.22.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf {packages/*/,}node_modules yarn.lock",
+    "reinstall": "yarn clean && yarn install",
+    "export": "NEXT_PUBLIC_IS_EXPORT=true yarn build ",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "prepare": "husky install",
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write",
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "husky": "^9.0.11",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.4"
@@ -19,6 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
+    "prettier": "3.3.2",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4"
